Bug 888568 - Range analysis, Handle int32 infinities on MAbs. r=mjrosenb